tests/corpus/v05-value-model/16_generator_yield_mutable_conflict_reject.ownership-plan.txt
# EXPECTED FAILURE — the v0.5 checker must reject this program.
# Future checker expectation: assert this diagnostic fires with the exact message class.

error[E_YIELD_READ_MUTATE_CONFLICT]: value `buffer` is read across a yield point but mutated in the same generator frame
  --> 16_generator_yield_mutable_conflict_reject.hew:27:9
   |
26 |         yield buffer.len();          // buffer read here (held across yield)
   |               ------ value `buffer` is read here and held across the yield point
27 |         buffer.push(i);              // ERROR: buffer mutated after yield in same frame
   |         ^^^^^^^^^^^^^^ value `buffer` is mutated here after the yield
   |
   = note: a generator frame may hold an immutable read across a yield only if the
           value cannot be mutated through any other path during suspension.
   = help: restructure to avoid holding the read across the yield, or avoid
           mutating `buffer` after the yield.  One approach: snapshot the length
           before yielding:
               let len = buffer.len();
               yield len;           // no read held across the yield point
               buffer.push(i);      // mutation is now safe
